--- a/src/main/resources/templates/listar_pedidos.html
+++ b/src/main/resources/templates/listar_pedidos.html
@@ -52,7 +52,6 @@
 
         </form>
         <p th:text="${mensagem}" style="color: rgb(121, 121, 13); margin-left: 59%; background-color: cornsilk;"></p>
-        <form action="#">
             <table class="table table-hover mt-0" style="max-width: 70%">
                 <thead>
                     <tr>
@@ -70,10 +69,13 @@
                         <td th:text="${pedido.data}"></td>
                         <td th:text="'R$ ' + ${pedido.valor}"></td>
                         <td th:each="item:${pedido.itens}" th:text="${item.nome}"></td>
+                        <td><a th:href="@{'/atualizar_pedido/' + ${pedido.id}}">
+                            <button type="submit" class="btn-warning" title="Atualizar">Atualizar</button></a></td>
+                            <td><a th:href="@{'/excluir_pedido/' + ${pedido.id}}">
+                                <button type="submit" class="btn-danger" title="Excluir">Excluir</button></a></td>
                     </tr>
                 </tbody>
             </table>
-        </form>
     </div>
 
 
