--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,11 +37,9 @@
     </div>
   </nav>
 
-  <h1 class="display-4 m-4">Seja Bem Vindo!</h1>
+  <h1 class="display-4 m-4" th:text="'Seja Bem Vindo ' + ${mensagem} + '!'"></h1>
   <a class="ml-4" href="/fazer_pedido">Fazer o pedido agora?</a>
   <br>
-  <p th:text="${mensagem}" style="width: 30%; color: rgb(121, 121, 13); background-color: cornsilk;"></p>
-  
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
