--- a/src/main/resources/templates/listar_itens.html
+++ b/src/main/resources/templates/listar_itens.html
@@ -71,7 +71,7 @@
                         <th scope="row" th:text="${item.id}">#</th>
                         <td th:text="${item.nome}"></td>
                         <td th:text="'R$ ' + ${item.preco}"></td>
-                        <td><a th:href="@{'/excluir_cadastro/' + ${item.id}}"><img src="img/deletar.png" title="Exluir"
+                        <td><a th:href="@{'/excluir_cadastro/' + ${item.id}}"><img src="img/deletar.png" title="Excluir"
                                     height="20" width="20"></a></td>
                         <td><a th:href="@{'/atualizar_cadastro/' + ${item.id}}"><img src="img/editar.png"
                                     title="Atualizar" height="20" width="20"></a></td>
