Alterações e Links para redirecionamento até a lista de itens no carrinho

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,21 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <title>Home</title>
+
+  <style>
+      .compras {
+
+          width: 20%;
+          height: 100%;
+          margin-left: 75%;
+          margin-top: 2%;
+
+      }
+
+      .qtdd {
+          position: absolute;
+      }
+  </style>
 </head>
 
 <body>
@@ -36,14 +51,25 @@
       </ul>
     </div>
   </nav>
+
+  <div class="compras">
+
+      <div class="qtdd">
+          <a href="/listar_compras">
+              <span style="color: green; font-size: 20px">Ver Meu Carrinho</span>
+          </a>
+          <br>
+          <span th:text="${session.car.size()} + ' itens'" style="margin-left: 32%"></span>
+      </div>
+  </div>
   
 
   <h1 class="display-4 m-4" th:text="'Seja Bem Vindo ' + ${mensagem} + '!'"></h1>
-  <a class="ml-4" href="/fazer_pedido">Fazer o pedido agora?</a>
   <br>
 
+
   <p th:text="${message}" style="color: rgb(121, 121, 13); margin-left: 59%; background-color: cornsilk;"></p>
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
