--- a/src/main/resources/templates/compras.html
+++ b/src/main/resources/templates/compras.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Lista de Pedidos</title>
+    <title>Carrinho de Compras</title>
 
 </head>
 
@@ -35,34 +35,47 @@
                     <a class="nav-link" href="/fazer_pedido">Fazer Pedido</a>
                 </li>
             </ul>
+        </div>
     </nav>
 
-        </form>
-        <a href="listar_itens">
-            <button type="submit" class="m-4 btn btn-success">Continuar Comprando</button>
+    <h3 class="m-4" style="font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(33, 109, 175)">Carrinho
+        <i style="color: rgb(158, 18, 18)"> de Compras</i></h3>
+
+        <a href="/listar_itens" style="margin-left: 10%">
+            <button type="submit" class="btn btn-success m-3">Continuar Comprando</button>
         </a>
-        <form action="#">
-            <table class="table table-hover mt-0" style="max-width: 70%">
+        <a href="/fazer_pedido"  style="margin-left: 35%">
+            <button type="submit" class="btn btn-danger m-3">Finalizar Compra</button>
+        </a>
+            <table class="table table-hover mt-0" style="max-width: 70%; margin-left: 10%">
                 <thead>
                     <tr>
                         <th></th>
-                        <th scope="col">ID</th>
-                        <th scope="col">Nome</th>
+                        <th scope="col">Produtos</th>
                         <th scope="col">Preço</th>
+                        <th scope="col">Excluir</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="item:${session.car}">
-                        <td><img th:src="@{${'/img/itens/' + item.id + '/' + item.nomeImagem}}" width="68"
+                    <tr th:each="item:${car}">
+                        <td><img th:src="@{${'/img/itens/' + item.id + '/' + item.nomeImagem}}" width="75"
                                 height="70" /></td>
-                        <th scope="row" th:text="${item.id}">#</th>
                         <td th:text="${item.nome}"></td>
                         <td th:text="'R$ ' + ${item.preco}"></td>
+                        <td><a th:href="@{'/deleteCarrinho/' + ${item.id}}" class="ml-3">
+                            <img src="img/deletar.png" alt="deletar" width="20" height="20" title="Excluir">
+                        </a></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <th style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 20px">
+                                Total dos Produtos: <b style="color: green; margin-left: 14%; font-size: 25px" th:text="'R$ ' + ${valorTotal}"></i>
+                        </th>
                     </tr>
                 </tbody>
             </table>
-        </form>
-    </div>
+            <h4 th:text="${mensagem}" style="margin: 5%; margin-left: 35%"></h4>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
