--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,84 +1,196 @@
 <!doctype html>
-<html lang="pt-BR" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html lang="pt-BR">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <title>Home</title>
-
-  <style>
-      .compras {
-
-          width: 20%;
-          height: 100%;
-          margin-left: 75%;
-          margin-top: 2%;
-
-      }
-
-      .qtdd {
-          position: absolute;
-      }
-  </style>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+  <!-- Google Fonts -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/css/mdb.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+  <title>LojaDoPerigo - Só Produto Caído do Caminhão!</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-    <a class="navbar-brand" href="/">Loja</a>
-
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
-            aria-expanded="true">Cadastrar</a>
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="/formulario_cliente">Cliente</a>
-            <a class="dropdown-item" href="/formulario_item">Item</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/fazer_pedido">Fazer Pedido</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-
-  <div class="compras">
-
-      <div class="qtdd">
-          <a href="/listar_compras">
-              <span style="color: green; font-size: 20px">Ver Meu Carrinho</span>
-          </a>
-          <br>
-          <span th:text="${session.car.size()} + ' itens'" style="margin-left: 32%"></span>
-      </div>
+  <div class="blue-grey lighten-5"
+    style="background-color: rgba(143, 142, 142, 0.178); padding-top: 5px; padding-bottom: 5px; padding-left: 5px;">
+    <span class="waves-effect mdb-icon-copy far fa-envelope mt-1 ml-2" style="font-size: 15pt;">
+      <small> adnrepper@gmail.com</small>
+    </span><a href="https://github.com/andersonmag" target="blanck" style="color: #0d47a1;">
+      <button type="button" class="btn btn-git ml-5"><i class="fab fa-github pr-1"></i> Github</button>
+    </a>
   </div>
-  
 
-  <h1 class="display-4 m-4" th:text="'Seja Bem Vindo ' + ${mensagem} + '!'"></h1>
-  <br>
+  <th:block th:include="navbar"></th:block>
 
+  <div class="container-fluid mt-3">
+    <div class="row mb-5">
+      <div class="col-2">
 
-  <p th:text="${message}" style="color: rgb(121, 121, 13); margin-left: 59%; background-color: cornsilk;"></p>
+        <blockquote class="blockquote bq-primary">
+          <p class="bq-title">Categorias
+          </p>
+        </blockquote>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+        <ul class="mt-3 list-group list-group-flush">
+          <li class="list-group-item">
+            <a href="">Brasil</a>
+          </li>
+          <li class="list-group-item">Liga Francesa</li>
+          <li class="list-group-item">Brasileirão</li>
+          <li class="list-group-item">LIga Inglesa</li>
+          <li class="list-group-item">Liga Esponhola</li>
+          <li class="list-group-item">Liga Asiatica</li>
+          <li class="list-group-item">Liga Japonesa</li>
+          <li class="list-group-item">LIga Argentina</li>
+        </ul>
+
+        <a class="d-flex justify-content-center mt-3 mb-2" href="#" style="font-size: 11pt;">
+          Listar Todas
+          <i class="fas fa-angle-double-right ml-2 mt-1"></i>
+        </a>
+      </div>
+
+      <div class="col-10 align-right">
+        <div id="carousel-thumb" class="carousel slide carousel-fade jumbotron text-center" data-ride="carousel">
+          <div class="carousel-inner" role="listbox">
+
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-thumb" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-thumb" data-slide-to="1"></li>
+              <li data-target="#carousel-thumb" data-slide-to="2"></li>
+              <li data-target="#carousel-thumb" data-slide-to="3"></li>
+            </ol>
+
+            <div class="carousel-item active view">
+              <img class="d-block w-100 imgpu2" src="images/carr2.jpg" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 imgpu2" src="images/carr6.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 imgpu2" src="images/carr1.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100 imgpu2" src="images/carr8.jpeg" alt="Fouth slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="jumbotron text-center blue-grey lighten-5 d-flex justify-content-center mb-5"
+    style="padding: 30px;background-color: rgba(143, 142, 142, 0.178);">
+    <ul class="list-group list-group-horizontal-xl">
+      <li class="mr-5">
+        <span class="waves-effect fas fa-shipping-fast d-flex justify-content-center" style="font-size: 25pt;"></span>
+        <p style="font-size: 11pt;">Entrega mais rapida do Brasil!<br>
+          (Chegamos até você mais rápido que o Coronga.)
+        </p>
+      </li>
+      <li class="mr-5">
+        <span class="waves-effect mdb-icon-copy fas fa-tshirt d-flex justify-content-center"
+          style="font-size: 25pt;"></span>
+        <p style="font-size: 11pt;">Produto de primeira linha!<br>
+          Qualidade garantida.
+        </p>
+      </li>
+      <li class="mr-5">
+        <span class="waves-effect mdb-icon-copy fas fa-award d-flex justify-content-center"
+          style="font-size: 25pt;"></span>
+        <p class="d-flex" style="font-size: 11pt;">100% Seguro! Garantia do Perigo!<br> Ou seu dinheiro de volta.
+        </p>
+      </li>
+    </ul>
+  </div>
+
+  <th:block th:include="card"></th:block>
+
+  <footer class="page-footer font-small elegant-color">
+    <div style="background-color: #0d47a1;">
+      <div class="container">
+
+        <div class="row py-1 d-flex align-items-center">
+          <div class="col-md-2 col-lg-7 text-center text-md-right">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container text-center text-md-left mt-5">
+      <div class="row mt-3">
+        <div class="col-md-4 col-9">
+          <h6 class="text-uppercase font-weight-bold">LojaDoPerigo</h6>
+          <hr class="primary-color-dark accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>Loja Virtual do Perigo(Todo mundo odeia o Chris). Aqui você encontra as mais variadas e de primeira linha
+            camisas de futebol!
+            A uma grande variedade de produtos em nosso site. Escolha seu(s) manto(s), seu tamanho, finalize sua compra
+            e é só aguardar no conforto da sua casa!
+            "Tudo que é compartilhado é melhor! Então não perca tempo, compartilhe com seus amigos :D !! Boas compras!"
+          </p>
+
+        </div>
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <h6 class="text-uppercase font-weight-bold">Camisas</h6>
+          <hr class="primary-color-dark accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <a href="#!">Brasileiras</a>
+          </p>
+          <p>
+            <a href="#!">Asiaticas</a>
+          </p>
+          <p>
+            <a href="#!">Europeias</a>
+          </p>
+          <p>
+            <a href="#!">Inglesas</a>
+          </p>
+
+        </div>
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <h6 class="text-uppercase font-weight-bold">Fale conosco</h6>
+          <hr class="primary-color-dark accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+          <p>
+            <a href="https://github.com/andersonmag">
+              <i class="fab fa-github mr-3"></i> Mais Projetos</p>
+          <p>
+            </a>
+            <i class="fas fa-envelope mr-3"></i> adnrepper@gmail.com</p>
+          <p>
+            <a href="http://www.linkedin.com/in/anderson-delmondes" target="blanck">
+              <i class="fab fa-linkedin mr-3"></i>Meu Linkedin</p>
+          </a>
+          <p>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright text-center py-3">© 2020 Anderson/Developer
+    </div>
+  </footer>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.15.0/js/mdb.min.js"></script>
 </body>
 
 </html>
